--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <title>IO Chat</title>
 
-    <!-- Bootstrap 3 -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -35,13 +34,13 @@
 
         <div id="messageArea" class="row">
             <div class="col-md-4">
-                <div class="well">
+                <div>
                     <h3>Online Users</h3>
                     <ul class="list-group" id="users"></ul>
                 </div>
             </div>
             <div class="col-md-8">
-                <div class="chat" id="chat"></div>
+                <div id="chat"></div>
 
                 <form id="messageForm">
                     <div class="form-group">
